crates/zendriver-mcp/tests/snapshots/schema_snapshots__monitor_snaps__monitor_stop_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::monitor::StopInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: StopInput
description: "Input for `browser_monitor_stop`."
type: object
properties:
  handle:
    description: "Handle returned by an earlier `browser_monitor_start`."
    type: string
additionalProperties: false
required:
  - handle
